# ir-lasertag-esp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  idf_component.yml
.github/: copilot-instructions.md
agent/: design.md  technology-stack.md
examples/basic/: CMakeLists.txt  main.cpp
examples/profiling/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/profiling/main/: main.cpp
host_test/: CMakeLists.txt  test_arclite_tagcode.cpp  test_irt_gun.cpp  test_main.cpp  test_protocol_config.cpp
host_test/stubs/: esp_err.h
host_test/stubs/driver/: gpio.h  rmt_encoder.h  rmt_rx.h  rmt_tx.h
host_test/stubs/freertos/: FreeRTOS.h  queue.h  semphr.h
include/ir_lasertag/codec/: ir_encoder.hpp  ir_protocol.hpp  ir_receiver.hpp  ir_rx_source.hpp  ir_transmitter.hpp  rmt_rx_source.hpp
include/ir_lasertag/protocols/: README.md
include/ir_lasertag/protocols/arclite/: README.md  arclite.hpp
include/ir_lasertag/protocols/bc/: README.md  bc.hpp
include/ir_lasertag/protocols/irt/: README.md  irt.hpp
include/ir_lasertag/protocols/milestag/: README.md  milestag.hpp
src/codec/: ir_encoder.cpp  ir_protocol_config.cpp  ir_receiver.cpp  ir_transmitter.cpp  rmt_rx_source.cpp
src/protocols/arclite/: arclite.cpp
src/protocols/bc/: bc.cpp
src/protocols/irt/: irt.cpp
